--- a/.github/workflows/gateway.yml
+++ b/.github/workflows/gateway.yml
@@ -1,17 +1,18 @@
 name: cloudrun-deploy
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  
 jobs:
+  jobs:
   setup-build-publish-deploy:
     name: Setup, Build, Publish, and Deploy
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@master
-
-    # Setup gcloud CLI
+      uses: actions/checkout@main
+      
+  # Setup gcloud CLI
     - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
         service_account_email: ${{ secrets.GCP_EMAIL }}
