--- a/.github/workflows/gateway.yml
+++ b/.github/workflows/gateway.yml
@@ -5,16 +5,13 @@ on:
       - main
 jobs:
   setup-build-publish-deploy:
-  name: Setup, Build, Publish, and Deploy
-  runs-on: ubuntu-latest
-  steps:
-    - step:
-    -     name: Setup
-          uses: actions/checkout@main
-
+    name: Setup, Build, Publish, and Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@master
     
   #  Setup gcloud CLI
-  - step: 
     - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
         service_account_email: ${{ secrets.GCP_EMAIL }}
