--- a/.github/workflows/gateway.yml
+++ b/.github/workflows/gateway.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@master
+      run: git checkout main
     
   #  Setup gcloud CLI
     - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
